--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,9 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="/script.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<a href="/"><li>Home</li></a>
+	<a href="/watchlist"><li>Browse Watch List</li></a>
 <div class="jumbotron text-center">
   <h1>IMDb Search</h1>
 </div>
 <div class="container">
+
+<div class="form-group">
+<form action="/search" method="get">
+	<input type="text" name="title" class="form-control" placeholder="Enter Movie Title">
+	<div class="text-center">
+	<input type="submit" class="btn btn-default" value="search">
+	</div>	
+</form>
+</div>
