--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,8 +1,8 @@
 <% include header %>
 
-<% for(var i = 0; i < Search.length; i++) { %>
-	<ol><a href="<%= Search[i].imdbID %>"><%= Search[i].Title %>
-	<%= Search[i].Year %></a></ol>
+<% for(var i = 0; i < movies.Search.length; i++) { %>
+	<ol><a href="<%= movies.Search[i].imdbID %>"><%= movies.Search[i].Title %>
+	<%= movies.Search[i].Year %></a></ol>
 <% } %>
 	
 
