--- a/views/movieinfo.ejs
+++ b/views/movieinfo.ejs
@@ -1,26 +1,24 @@
 <% include header %>
 <div class="text-center">
-<div class="col-md-6">
-<h2>Movie Information</h2>
-<ul class="list-group">
-  <li class="list-group-item"><strong>Title:</strong> <%=Title%></li>
-  <li class="list-group-item"><strong>Year:</strong> <%=Year %></li>
-  <li class="list-group-item"><strong>Genere:</strong> <%=Genre%></li>
-  <li class="list-group-item"><strong>Actors:</strong> <%=Actors%></li>
-</ul>
+	<div class="col-md-6">
+	<h2>Movie Information</h2>
+		<ul class="list-group">
+  			<li class="list-group-item"><strong>Title:</strong> <%=Title%></li>
+  			<li class="list-group-item"><strong>Year:</strong> <%=Year %></li>
+  			<li class="list-group-item"><strong>Genre:</strong> <%=Genre%></li>
+  			<li class="list-group-item"><strong>Actors:</strong> <%=Actors%></li>
+		</ul>
 		
-</div>
+	</div>
 
-	<form action="/watchlist" method="post">
-			<input type="hidden" name="imdb_code" value="<%=imdbID%>" >
-			<input type="hidden" name="movie_title" value="<%=Title%>">
-			<input type="hidden" name="year" value="<%=Year%>">
-			<input class="watchButton" type="submit" name="watchList" value="Watch List">
-	</form>
+<button class="addButton" type="submit" data-movie_title="<%=Title%>" data-imdb="<%=imdbID%>" data-year="<%=Year%>">Add to Watchlist</button>
+<input type="hidden" name="imdb_code" value="<%=imdbID%>">
+<input type="hidden" name="title" value="<%=Title%>">
+<input type="hidden" name="year" value="<%=Year%>">
+			
 
-
-<div class="col-md-6">
-	<img src="<%= Poster%>">
-</div>
+	<div class="col-md-6">
+		<img src="<%= Poster%>">
+	</div>
 </div>
 <% include footer %>
