working on comment feature

--- a/views/watchlist.ejs
+++ b/views/watchlist.ejs
@@ -10,6 +10,10 @@
 	<div class="deleteButton">
 		<a href="#" type="submit" class="delete" data-id="<%= item.id %>">Delete</a>
 	</div>
+
+	<div class="commentButton">
+		<a href="/watchlist/<%=item.id%>/comment" type="submit" class="comment">Comment</a>
+	</div>
 </div>
 <% }) %>
 
